--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- HUD Panel -->
     <div class="hud" id="hud">
-        <div><strong>🎈 Cappadocia Blockchain Adventure</strong></div>
+        <div><strong>🎈 Monad Blockchain Adventure</strong></div>
         <div>Block Height: <span id="blockHeight">Loading...</span></div>
         <div>TPS: <span id="tps">0</span> (Wind Speed)</div>
         <div>Gas Price: <span id="gasPrice">0</span> GWei</div>
@@ -37,9 +37,7 @@
     </div>
 
     <!-- Info Panel - Moved to top -->
-    <div class="info-panel">
-        🎈 Click balloons to see block details • LilChogs are transactions waiting for confirmation • Watch them fly to the sky! 🌤️
-    </div>
+   
 
     <!-- Balloon Detail Modal -->
     <div class="balloon-detail" id="balloonDetail">
