--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
     <!-- HUD Panel -->
     <div class="hud" id="hud">
-        <div><strong>🎈 Monad Blockchain Adventure</strong></div>
+        <div><strong>🎈 Cappadocia Blockchain Adventure</strong></div>
         <div>Block Height: <span id="blockHeight">Loading...</span></div>
         <div>TPS: <span id="tps">0</span> (Wind Speed)</div>
         <div>Gas Price: <span id="gasPrice">0</span> GWei</div>
         <div>Flying Balloons: <span id="flyingBalloons">0</span></div>
-        <div>Waiting Lilchogs: <span id="waitingPeople">0</span></div>
+        <div>Waiting Monanimals: <span id="waitingPeople">0</span></div>
         <div>Weather: <span id="weather">Clear Skies</span></div>
     </div>
 
@@ -31,13 +31,10 @@
     <div class="controls">
         <button class="sound-toggle" onclick="toggleSound()" id="soundToggle">🔊</button>
         <button onclick="togglePause()">⏸️ Pause</button>
-        <button onclick="addRandomTx()">🦔 Add LilChog</button>
+        <button onclick="addRandomTx()">🐠 Add Monanimal</button>
         <button onclick="toggleDebug()">🔍 Debug</button>
         <button onclick="resetGame()">🔄 Reset</button>
     </div>
-
-    <!-- Info Panel - Moved to top -->
-   
 
     <!-- Balloon Detail Modal -->
     <div class="balloon-detail" id="balloonDetail">
