--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="https://x.com/prematrkurtcuk" target="_blank" class="footer-link">
                             <span class="link-icon">🐦</span> Twitter
                         </a>
-                        <a href="https://github.com/zacnider" target="_blank" class="footer-link">
+                        <a href="https://github.com/" target="_blank" class="footer-link">
                             <span class="link-icon">💻</span> GitHub
                         </a>
                     </div>
