--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="images/imagelogo.png" alt="MonAir Logo" class="main-logo">
             <div class="header-text">
                 <h1>MonAir</h1>
-                <p>Monad Testnet Visualizer</p>
+                <p>Monad Visualizer</p>
             </div>
         </div>
         <div class="header-links">
