--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="images/imagelogo.png" alt="MonAir Logo" class="main-logo">
             <div class="header-text">
                 <h1>MonAir</h1>
-                <p>Monad Visualizer</p>
+                <p>Monad Mainnet Visualizer</p>
             </div>
         </div>
         <div class="header-links">
@@ -80,7 +80,7 @@
             <div class="footer-info">
                 <div class="footer-content">
                     <div class="footer-text">
-                        Built on <a href="https://testnet.monad.xyz" target="_blank" class="monad-link">Monad</a> Testnet
+                        Built on <a href="https://app.monad.xyz" target="_blank" class="monad-link">Monad</a> Mainnet
                     </div>
                     <div class="footer-links">
                         <a href="https://x.com/prematrkurtcuk" target="_blank" class="footer-link">
@@ -112,7 +112,7 @@
     <!-- Loading Screen -->
     <div class="loading" id="loading">
         <div class="loading-spinner"></div>
-        <div>Connecting to Monad Testnet...</div>
+        <div>Connecting to Monad Mainnet...</div>
         <div style="font-size: 12px; margin-top: 10px;">Preparing balloons for launch 🎈</div>
     </div>
 
@@ -142,13 +142,13 @@
             <div class="guide-header">
                 <img src="images/purple_logo.png" alt="Monad Logo" class="guide-logo">
                 <h2>🎈 Cappadocia Blockchain Adventure</h2>
-                <p class="guide-subtitle">Interactive Monad Testnet Visualizer</p>
+                <p class="guide-subtitle">Interactive Monad Mainnet Visualizer</p>
             </div>
             
             <div class="guide-sections">
                 <div class="guide-section">
                     <h3>🌟 What is this project?</h3>
-                    <p>This is an interactive visualization of the <strong>Monad Testnet blockchain</strong> featuring the magical theme of Cappadocia. Watch real blockchain transactions come to life as cute creatures called <strong>Monanimals</strong> board hot air balloons representing blockchain blocks!</p>
+                    <p>This is an interactive visualization of the <strong>Monad Mainnet blockchain</strong> featuring the magical theme of Cappadocia. Watch real blockchain transactions come to life as cute creatures called <strong>Monanimals</strong> board hot air balloons representing blockchain blocks!</p>
                 </div>
 
                 <div class="guide-section">
@@ -204,7 +204,7 @@
                             <span class="step-number">1</span>
                             <div>
                                 <strong>Watch the Magic</strong>
-                                <p>Monanimals spawn automatically and walk to balloons representing real Monad testnet blocks</p>
+                                <p>Monanimals spawn automatically and walk to balloons representing real Monad Mainnet blocks</p>
                             </div>
                         </div>
                         <div class="usage-step">
@@ -234,7 +234,7 @@
                 <div class="guide-section">
                     <h3>🔧 Features</h3>
                     <ul>
-                        <li>🌐 <strong>Real-time blockchain data</strong> from Monad Testnet</li>
+                        <li>🌐 <strong>Real-time blockchain data</strong> from Monad Mainnet</li>
                         <li>🎨 <strong>7 unique Monanimal types</strong> for different transaction types</li>
                         <li>🌤️ <strong>Dynamic weather system</strong> affecting balloon movement</li>
                         <li>🎵 <strong>Background music</strong> with volume control</li>
@@ -247,10 +247,10 @@
 
                 <div class="guide-section">
                     <h3>🌐 About Monad</h3>
-                    <p><strong>Monad</strong> is a high-performance blockchain designed for scalability and speed. This visualizer connects to the Monad Testnet to show real blockchain activity in an engaging, educational way.</p>
+                    <p><strong>Monad</strong> is a high-performance blockchain designed for scalability and speed. This visualizer connects to the Monad Mainnet to show real blockchain activity in an engaging, educational way.</p>
                     <div class="monad-links">
-                        <a href="https://testnet.monad.xyz" target="_blank" class="monad-link">🌐 Monad Testnet</a>
-                        <a href="https://testnet.monadexplorer.com" target="_blank" class="monad-link">🔍 Block Explorer</a>
+                        <a href="https://app.monad.xyz" target="_blank" class="monad-link">🌐 Monad Mainnet</a>
+                        <a href="https://monadexplorer.com" target="_blank" class="monad-link">🔍 Block Explorer</a>
                     </div>
                 </div>
             </div>
